# Brunzit

./: README.md
proj/cmake/: CMakeLists.txt
src/: Actions.hpp  Agent.hpp  Brunzit.cpp  Corpus.hpp  Extractor.hpp  Flock.hpp  Parser.hpp  Runtime.hpp  Sound.hpp  Synth.hpp
